# trgdataformats

./: CMakeLists.txt
docs/: README.md
include/trgdataformats/: TriggerActivityData.hpp  TriggerCandidateData.hpp  TriggerObjectOverlay.hpp  TriggerPrimitive.hpp  Types.hpp
pybindsrc/: module.cpp  registrators.hpp  submodules.hpp  trigger_activity.cpp  trigger_bitwords.cpp  trigger_candidate.cpp  trigger_primitive.cpp
python/trgdataformats/: __init__.py
python/trgdataformats/trigger_primitive/: __init__.py
unittest/: Trgdataformats  Trgdataformats_test.cxx
